# credit-risk-api

./: .gitignore  README.md  ejemplo.txt  pyproject.toml
api/: main.py
api/models/: feature_schema.json
src/preprocessing/: base_preprocessing.py
