[project]
name = "credit-risk-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "feature-engine>=1.9.4",
    "lightgbm>=4.6.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "python-multipart>=0.0.28",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "skrub>=0.9.0",
    "uvicorn>=0.47.0",
    "venn-abers>=1.5.3",
    "xgboost>=3.2.0",
]
